Scrollbar visible bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
-
 body {
+  margin: 0;
+  padding: 0;
+}
+
+
+.wrapper {
   margin: 0;
   min-height: 100vh;
   width: max-content;
-  min-width: 100vW;
+  min-width: 100vw;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -246,8 +251,8 @@ table {
 }
 
 .modal-cnt {
-  width: 950px;
-  height: 750px;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
